<resources>
    <string name="app_name">Memory Game</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="choose_players">choose number of players</string>
    <string name="one_player">one player</string>
    <string name="two_players">two players</string>
    <string name="play">Play</string>
    <string name="time">00:00</string>
    <string name="choose_game">choose game</string>
    <string name="exit_button">Exit</string>

</resources>
