<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbackground"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/grobold"
            android:onClick="onRadioButtonClicked"
            android:text="@string/easy"
            android:textAllCaps="false"
            android:textColor="@color/pink_color"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/grobold"
            android:onClick="onRadioButtonClicked"
            android:text="@string/intermediate"
            android:textColor="@color/pink_color"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/grobold"
            android:onClick="onRadioButtonClicked"
            android:text="@string/expert"
            android:textColor="@color/pink_color"
            android:textSize="24sp" />
    </RadioGroup>


    <RadioGroup
        android:id="@+id/radioGroup_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <RadioButton
            android:id="@+id/one_Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/grobold"

            android:onClick="onRadioButtonOnePlayerClicked"
            android:text="@string/one_player"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/two_Player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/grobold"

            android:onClick="onRadioButtonOnePlayerClicked"
            android:text="@string/two_players"
            android:textSize="24sp" />

    </RadioGroup>


    <ImageButton
        android:id="@+id/lunchMemoryGame"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@null"
        android:contentDescription="TODO"
        android:onClick="lunchMemoryGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPhotos_switch"
        app:srcCompat="@drawable/play_96" />

    <ImageButton
        android:id="@+id/exitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:contentDescription="TODO"
        android:onClick="exitGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shutdown_48" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@null"
        android:contentDescription="it contains setting for game "
        android:onClick="onSettingClick"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adjust_48" />

    <ImageButton
        android:id="@+id/audio_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:onClick="audioOn"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/exitGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touch_sound_on"
        app:srcCompat="@drawable/audio_off"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/audio_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:onClick="audioOff"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/exitGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touch_sound_on"
        app:srcCompat="@drawable/audio_on" />

    <ImageButton
        android:id="@+id/touch_sound_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:onClick="touch_sound_on"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPhotos_switch"
        app:srcCompat="@drawable/microphone_on_48" />

    <ImageButton
        android:id="@+id/touch_sound_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:onClick="touch_sound_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfPhotos_switch"
        app:srcCompat="@drawable/microphone_off_48" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/grobold"
        android:text="Animal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/grobold"
        android:text="Fruit"
        android:textColor="@color/pink_color"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/typeOfPhotos_switch"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_1" />

    <Switch
        android:id="@+id/typeOfPhotos_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_1" />

    <ImageView
        android:id="@+id/cloud_1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:srcCompat="@drawable/clouds" />

    <ImageView
        android:id="@+id/cloud_2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@drawable/clouds" />

</android.support.constraint.ConstraintLayout>